# geolocator

./: .gitignore  CMakeLists.txt  country.cpp  country.h  country_shape.cpp  country_shape.h  launch.sh  main.cpp  readme.md  tools.h
cmake_modules/: FindBoost.cmake  FindCppCMS.cmake  FindTcMalloc.cmake  Findasio.cmake
lib/: crow_all.h  optional.hpp
resources/: config.json
src/: Country.cpp  Country.h  CountryShape.cpp  CountryShape.h  HandlerAllocator.cpp  HandlerAllocator.h  Protocol.cpp  Protocol.h  ProtocolMessage.cpp  ProtocolMessage.h  Region.cpp  Region.h  RegionShape.cpp  RegionShape.h  SocketServer.cpp  SocketServer.h  SocketSession.cpp  SocketSession.h  Tools.cpp  Tools.h  WoeData.cpp  country.cpp  country.h  country_shape.cpp  country_shape.h  main.cpp  region.cpp  region.h  region_shape.cpp  region_shape.h  tools.cpp  tools.h  woe_data.cpp  woe_data.h
